--- a/SocialHub-dashboard/index.html
+++ b/SocialHub-dashboard/index.html
@@ -49,19 +49,38 @@
         </div>
 
         <ul class="sidebar-list">
-          <li class="sidebar-list-item">
-            <span class="material-icons-outlined">home</span>Dashboard
-          </li>
-          <li class="sidebar-list-item">
-            <span class="material-icons-outlined">label_important</span> YouTube
-          </li>
-          <li class="sidebar-list-item">
-            <span class="material-icons-outlined">label_important</span>
-            Facebook
-          </li>
-          <li class="sidebar-list-item">
-            <span class="material-icons-outlined">label_important</span> Twitter
-          </li>
+          <style>
+            a {
+              text-decoration: none;
+            }
+          </style>
+
+          <a href="index.html">
+            <li class="sidebar-list-item">
+              <span class="material-icons-outlined">home</span>Dashboard
+            </li>
+          </a>
+
+          <a href="yt_dashboard.html">
+            <li class="sidebar-list-item">
+              <span class="material-icons-outlined">label_important</span>
+              YouTube
+            </li>
+          </a>
+
+          <a href="https://www.example.com">
+            <li class="sidebar-list-item">
+              <span class="material-icons-outlined">label_important</span>
+              Facebook
+            </li>
+          </a>
+
+          <a href="https://www.example.com">
+            <li class="sidebar-list-item">
+              <span class="material-icons-outlined">label_important</span>
+              Twitter
+            </li>
+          </a>
         </ul>
       </aside>
       <!--Sidebar end-->
