--- a/SocialHub-dashboard/index.html
+++ b/SocialHub-dashboard/index.html
@@ -43,7 +43,10 @@
           <div class="sidebar-brand">
             <span class="material-icons-outlined">dashboard</span>SocialHub
           </div>
-          <span class="material-icons-outlined" onclick="closeSidebar()"
+          <span
+            class="material-icons-outlined"
+            id="close_btn"
+            onclick="closeSidebar()"
             >close</span
           >
         </div>
